Refine hero and vision messaging

--- a/index.html
+++ b/index.html
@@ -541,9 +541,9 @@
         </div>
       </div>
       <div class="hero-content">
-        <h1>Build the future with your community</h1>
+        <h1>Build a cooperative future on the open web</h1>
         <p>
-          3dvr.tech is a cooperative lab crafting respectful tools that share ownership,
+          3dvr.tech is a collaborative lab shaping respectful tools that return ownership,
           honor the planet, and help creators grow together.
         </p>
         <div class="hero-buttons">
@@ -557,16 +557,16 @@
         </div>
         <ul class="hero-vision-highlights" aria-label="Highlights from our vision">
           <li>
-            <span class="hero-vision-title">Shared Ownership</span>
-            <span class="hero-vision-copy">Member-guided roadmaps and transparent stewardship.</span>
+            <span class="hero-vision-title">Cooperative Ownership</span>
+            <span class="hero-vision-copy">Product decisions led by the people building and relying on them.</span>
           </li>
           <li>
-            <span class="hero-vision-title">Respectful Tools</span>
-            <span class="hero-vision-copy">Designs that protect people, data, and the planet.</span>
+            <span class="hero-vision-title">Carefully Crafted Tools</span>
+            <span class="hero-vision-copy">Human-centered design that respects privacy and the planet.</span>
           </li>
           <li>
-            <span class="hero-vision-title">Growing Together</span>
-            <span class="hero-vision-copy">Training and services that uplift digital nomads and makers.</span>
+            <span class="hero-vision-title">Community Momentum</span>
+            <span class="hero-vision-copy">Training and services that create pathways for makers everywhere.</span>
           </li>
         </ul>
       </div>
@@ -580,24 +580,24 @@
       <h2>Our Vision</h2>
       <div class="vision-grid">
         <article class="vision-card">
-          <h3>Shared Ownership</h3>
-          <p>Technology belongs with the people who build it and the communities who rely on it.</p>
+          <h3>Cooperative Ownership</h3>
+          <p>Technology stays rooted in the people who contribute to it and the communities who depend on it.</p>
           <ul>
-            <li>Employee- and customer-owned from the start.</li>
-            <li>Member voice guiding every major decision.</li>
+            <li>Employee- and customer-owners shaping strategy together.</li>
+            <li>Transparent stewardship that keeps value circulating locally.</li>
           </ul>
         </article>
         <article class="vision-card">
-          <h3>Respectful Tools</h3>
-          <p>We design tools that protect people and the planet.</p>
+          <h3>Carefully Crafted Tools</h3>
+          <p>We design systems that protect people, their data, and the environments they call home.</p>
           <ul>
-            <li>Repairable hardware and joyful, healthy experiences.</li>
-            <li>Sustainable choices stitched into every release.</li>
+            <li>Repairable hardware paired with healthy, joyful experiences.</li>
+            <li>Sustainable choices embedded into every release.</li>
           </ul>
         </article>
         <article class="vision-card">
-          <h3>Growing Together</h3>
-          <p>Our services help the community thrive while preparing for the next wave of innovation.</p>
+          <h3>Community Momentum</h3>
+          <p>Our services help members thrive today while preparing for the next wave of innovation.</p>
           <ul>
             <li>Websites and support that lift up nomads, creators, and explorers.</li>
             <li>Training pathways that equip and employ the world in cooperative tech work.</li>
