Tighten hero and vision messaging

--- a/index.html
+++ b/index.html
@@ -536,12 +536,12 @@
           <div class="hero-spark hero-spark--bottom"></div>
           <img src="3DVR.png" alt="" />
           <p>
-            Open source. Cooperative powered. Focused on experiences that feel as visionary as they are sustainable.
+            Open source. Community powered. Focused on experiences that feel as visionary as they are sustainable.
           </p>
         </div>
       </div>
       <div class="hero-content">
-        <h1>Build a cooperative future on the open web</h1>
+        <h1>Build the future on the open web</h1>
         <p>
           3dvr.tech is a collaborative lab shaping respectful tools that return ownership,
           honor the planet, and help creators grow together.
@@ -557,15 +557,15 @@
         </div>
         <ul class="hero-vision-highlights" aria-label="Highlights from our vision">
           <li>
-            <span class="hero-vision-title">Cooperative Ownership</span>
+            <span class="hero-vision-title">Own What You Build</span>
             <span class="hero-vision-copy">Product decisions led by the people building and relying on them.</span>
           </li>
           <li>
-            <span class="hero-vision-title">Carefully Crafted Tools</span>
+            <span class="hero-vision-title">Design for Longevity</span>
             <span class="hero-vision-copy">Human-centered design that respects privacy and the planet.</span>
           </li>
           <li>
-            <span class="hero-vision-title">Community Momentum</span>
+            <span class="hero-vision-title">Grow Together</span>
             <span class="hero-vision-copy">Training and services that create pathways for makers everywhere.</span>
           </li>
         </ul>
@@ -580,15 +580,15 @@
       <h2>Our Vision</h2>
       <div class="vision-grid">
         <article class="vision-card">
-          <h3>Cooperative Ownership</h3>
+          <h3>Shared Stewardship</h3>
           <p>Technology stays rooted in the people who contribute to it and the communities who depend on it.</p>
           <ul>
             <li>Employee- and customer-owners shaping strategy together.</li>
-            <li>Transparent stewardship that keeps value circulating locally.</li>
+            <li>Transparent governance that keeps value circulating locally.</li>
           </ul>
         </article>
         <article class="vision-card">
-          <h3>Carefully Crafted Tools</h3>
+          <h3>Regenerative Craft</h3>
           <p>We design systems that protect people, their data, and the environments they call home.</p>
           <ul>
             <li>Repairable hardware paired with healthy, joyful experiences.</li>
@@ -596,17 +596,17 @@
           </ul>
         </article>
         <article class="vision-card">
-          <h3>Community Momentum</h3>
+          <h3>Pathways for Makers</h3>
           <p>Our services help members thrive today while preparing for the next wave of innovation.</p>
           <ul>
             <li>Websites and support that lift up nomads, creators, and explorers.</li>
-            <li>Training pathways that equip and employ the world in cooperative tech work.</li>
+            <li>Training pathways that equip and employ the world in member-led tech work.</li>
           </ul>
         </article>
       </div>
       <div class="vision-footnote">
         <p>
-          This is only the starting point. We'll keep investing in open, cooperative systems that balance innovation,
+          This is only the starting point. We'll keep investing in open, community-owned systems that balance innovation,
           accessibility, and care for the Earth.
         </p>
         <a class="vision-link" href="https://3dvr.tech/vision">
