--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
   <style>
-    html {
-      scroll-behavior: smooth;
-      background: var(--bg-hero);
-    }
-
     :root {
       --accent: #00ffc8;
       --bg-hero: linear-gradient(to bottom, #2c3e50, #4ca1af);
@@ -27,12 +22,18 @@
       --text-dark: #000000;
     }
 
+    html {
+      scroll-behavior: smooth;
+      background: linear-gradient(to bottom, #2c3e50, #4ca1af);
+    }
+
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
       font-family: 'Inter', sans-serif;
       color: var(--text-light);
       background: var(--bg-hero);
+      background-color: #2c3e50;
       line-height: 1.7;
     }
 
