Temporarily disable header fade animation

--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
       position: sticky;
       top: 0;
       z-index: 1001;
-      opacity: 0;
-      transform: translateY(-20px);
-      animation: fadeSlideIn 1.8s ease-out forwards;
-      animation-delay: 1s;
+      /* TODO: Restore fadeSlideIn animation once the initial background flash is resolved. */
+      /* opacity: 0; */
+      /* transform: translateY(-20px); */
+      /* animation: fadeSlideIn 1.8s ease-out forwards; */
+      /* animation-delay: 1s; */
     }
 
     header img { height: 48px; max-width: 150px; }
