Add SEO metadata and sitemap

--- a/index.html
+++ b/index.html
@@ -4,10 +4,60 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="dark light" />
+  <meta
+    name="description"
+    content="3dvr.tech delivers community-first websites, apps, and digital strategy so emerging organizations can build trust and grow in the open web."
+  />
+  <meta name="keywords" content="3dvr, 3dvr tech, 3dvr websites, community web design, open web lab" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://3dvr.tech/" />
   <title>3dvr.tech</title>
   <link rel="icon" href="3DVRfavicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="3dvr.tech" />
+  <meta property="og:title" content="3dvr.tech | Community-first web lab" />
+  <meta
+    property="og:description"
+    content="Partner with 3dvr.tech to launch human-centered websites, apps, and immersive experiences backed by open source principles."
+  />
+  <meta property="og:url" content="https://3dvr.tech/" />
+  <meta property="og:image" content="https://3dvr.tech/3DVR.png" />
+  <meta property="og:image:alt" content="3dvr.tech logomark" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="3dvr.tech | Community-first web lab" />
+  <meta
+    name="twitter:description"
+    content="Partner with 3dvr.tech to launch human-centered websites, apps, and immersive experiences backed by open source principles."
+  />
+  <meta name="twitter:image" content="https://3dvr.tech/3DVR.png" />
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "@id": "https://3dvr.tech/#organization",
+      "name": "3dvr.tech",
+      "url": "https://3dvr.tech/",
+      "logo": "https://3dvr.tech/3DVR.png",
+      "description": "3dvr.tech delivers community-first websites, apps, and digital strategy for emerging organizations.",
+      "sameAs": [
+        "https://www.facebook.com/3dvr.facebook/",
+        "https://www.linkedin.com/company/3dvrtech",
+        "https://www.instagram.com/3dvr.tech/",
+        "https://github.com/tmsteph/3dvr-web"
+      ],
+      "contactPoint": [
+        {
+          "@type": "ContactPoint",
+          "contactType": "customer support",
+          "url": "https://3dvr.tech/support.html"
+        }
+      ]
+    }
+  </script>
 
   <style>
     :root {
@@ -546,7 +596,7 @@
         </div>
       </div>
       <div class="hero-content">
-        <h1>Build the future on the open web</h1>
+        <h1>Build the future on the open web with 3dvr.tech</h1>
         <p>
           3dvr.tech is a collaborative lab shaping respectful tools that return ownership,
           honor the planet, and help creators grow together.
