--- a/spirituality/index.html
+++ b/spirituality/index.html
@@ -5,6 +5,35 @@
   <title>3DVR.Tech · Spirituality</title>
   <meta name="description" content="Let the Lord's light shine through technology, community, and craft. Spiritual home for 3dvr.tech & tmsteph." />
   <meta name="color-scheme" content="dark light" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://3dvr.tech/spirituality/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="3dvr.tech" />
+  <meta property="og:title" content="3dvr.tech Spirituality" />
+  <meta property="og:description" content="Explore the spiritual practice guiding 3dvr.tech's community, rituals, and devotionals." />
+  <meta property="og:url" content="https://3dvr.tech/spirituality/" />
+  <meta property="og:image" content="https://3dvr.tech/3DVR.png" />
+  <meta property="og:image:alt" content="3dvr.tech logomark" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="3dvr.tech Spirituality" />
+  <meta name="twitter:description" content="Explore the spiritual practice guiding 3dvr.tech's community, rituals, and devotionals." />
+  <meta name="twitter:image" content="https://3dvr.tech/3DVR.png" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "@id": "https://3dvr.tech/#organization",
+      "name": "3dvr.tech",
+      "url": "https://3dvr.tech/",
+      "logo": "https://3dvr.tech/3DVR.png",
+      "sameAs": [
+        "https://www.facebook.com/3dvr.facebook/",
+        "https://www.linkedin.com/company/3dvrtech",
+        "https://www.instagram.com/3dvr.tech/",
+        "https://github.com/tmsteph/3dvr-web"
+      ]
+    }
+  </script>
   <link rel="icon" href="https://fav.farm/✨" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
