--- a/vision/index.html
+++ b/vision/index.html
@@ -5,6 +5,35 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>3dvr.tech · Our Vision</title>
   <meta name="description" content="3dvr.tech is building an open-source ecosystem: laptop, phone, e-bike, car, backpack, tent, and yurt — plus a suite of web apps and subscriptions to get there." />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://3dvr.tech/vision/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="3dvr.tech" />
+  <meta property="og:title" content="3dvr.tech Vision" />
+  <meta property="og:description" content="Dive into the 3dvr.tech roadmap for open hardware, immersive software, and regenerative community infrastructure." />
+  <meta property="og:url" content="https://3dvr.tech/vision/" />
+  <meta property="og:image" content="https://3dvr.tech/3DVR.png" />
+  <meta property="og:image:alt" content="3dvr.tech logomark" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="3dvr.tech Vision" />
+  <meta name="twitter:description" content="Dive into the 3dvr.tech roadmap for open hardware, immersive software, and regenerative community infrastructure." />
+  <meta name="twitter:image" content="https://3dvr.tech/3DVR.png" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "@id": "https://3dvr.tech/#organization",
+      "name": "3dvr.tech",
+      "url": "https://3dvr.tech/",
+      "logo": "https://3dvr.tech/3DVR.png",
+      "sameAs": [
+        "https://www.facebook.com/3dvr.facebook/",
+        "https://www.linkedin.com/company/3dvrtech",
+        "https://www.instagram.com/3dvr.tech/",
+        "https://github.com/tmsteph/3dvr-web"
+      ]
+    }
+  </script>
   <link rel="icon" href="/3DVRfavicon.png" />
   <style>
     :root {
