--- a/community.html
+++ b/community.html
@@ -3,9 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta
+    name="description"
+    content="Connect with the 3dvr.tech builder community, join meetups, and collaborate on open-source tools for regenerative projects."
+  />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://3dvr.tech/community.html" />
   <title>Builder Community | 3dvr.tech</title>
   <link rel="icon" href="3DVRfavicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="3dvr.tech" />
+  <meta property="og:title" content="3dvr.tech Builder Community" />
+  <meta
+    property="og:description"
+    content="See how the 3dvr.tech network collaborates on web experiences, skillshares, and regenerative tech initiatives."
+  />
+  <meta property="og:url" content="https://3dvr.tech/community.html" />
+  <meta property="og:image" content="https://3dvr.tech/3DVR.png" />
+  <meta property="og:image:alt" content="3dvr.tech logomark" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="3dvr.tech Builder Community" />
+  <meta
+    name="twitter:description"
+    content="See how the 3dvr.tech network collaborates on web experiences, skillshares, and regenerative tech initiatives."
+  />
+  <meta name="twitter:image" content="https://3dvr.tech/3DVR.png" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "@id": "https://3dvr.tech/#organization",
+      "name": "3dvr.tech",
+      "url": "https://3dvr.tech/",
+      "logo": "https://3dvr.tech/3DVR.png",
+      "sameAs": [
+        "https://www.facebook.com/3dvr.facebook/",
+        "https://www.linkedin.com/company/3dvrtech",
+        "https://www.instagram.com/3dvr.tech/",
+        "https://github.com/tmsteph/3dvr-web"
+      ]
+    }
+  </script>
   <style>
     :root {
       --accent: #00ffc8;
