--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -3,8 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta
+    name="description"
+    content="Browse recent 3dvr.tech projects featuring community websites, immersive storytelling, and regenerative tech collaborations."
+  />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://3dvr.tech/pages/portfolio.html" />
   <title>3DVR.tech Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="3dvr.tech" />
+  <meta property="og:title" content="3dvr.tech Portfolio" />
+  <meta
+    property="og:description"
+    content="See how 3dvr.tech collaborates with founders and educators on open web experiences."
+  />
+  <meta property="og:url" content="https://3dvr.tech/pages/portfolio.html" />
+  <meta property="og:image" content="https://3dvr.tech/3DVR.png" />
+  <meta property="og:image:alt" content="3dvr.tech logomark" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="3dvr.tech Portfolio" />
+  <meta
+    name="twitter:description"
+    content="See how 3dvr.tech collaborates with founders and educators on open web experiences."
+  />
+  <meta name="twitter:image" content="https://3dvr.tech/3DVR.png" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "@id": "https://3dvr.tech/#organization",
+      "name": "3dvr.tech",
+      "url": "https://3dvr.tech/",
+      "logo": "https://3dvr.tech/3DVR.png",
+      "sameAs": [
+        "https://www.facebook.com/3dvr.facebook/",
+        "https://www.linkedin.com/company/3dvrtech",
+        "https://www.instagram.com/3dvr.tech/",
+        "https://github.com/tmsteph/3dvr-web"
+      ]
+    }
+  </script>
   <style>
     :root {
       --accent: #6ef9d6;
