--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       z-index: 1;
       display: flex;
       flex-direction: column;
-      align-items: stretch;
+      align-items: center;
       gap: clamp(2.5rem, 5vw, 4rem);
       max-width: 1200px;
       margin: 0 auto;
@@ -237,6 +237,7 @@
       gap: 1.5rem;
       margin-top: 0.5rem;
       align-items: flex-start;
+      align-self: flex-start;
       max-width: 720px;
       width: 100%;
     }
@@ -319,6 +320,7 @@
       position: relative;
       display: flex;
       justify-content: center;
+      align-self: flex-start;
       width: 100%;
     }
     .hero-logo-card {
@@ -392,7 +394,6 @@
 
     @media (min-width: 900px) {
       .hero-inner {
-        align-items: flex-start;
         gap: clamp(3rem, 6vw, 4.5rem);
       }
       .hero-intro,
