--- a/index.html
+++ b/index.html
@@ -92,13 +92,16 @@
     header {
       background: rgba(0, 0, 0, 0.6);
       backdrop-filter: blur(10px);
-      padding: 1rem 2rem;
+      padding: clamp(0.85rem, 2vw, 1rem) clamp(1rem, 4vw, 2rem);
       display: flex;
       justify-content: space-between;
       align-items: center;
       position: sticky;
       top: 0;
       z-index: 1001;
+      width: min(100%, 100vw);
+      margin-inline: auto;
+      overflow: clip;
       /* TODO: Restore fadeSlideIn animation once the initial background flash is resolved. */
       /* opacity: 0; */
       /* transform: translateY(-20px); */
@@ -108,11 +111,21 @@
 
     header img { height: 48px; max-width: 150px; }
 
-    nav { display: flex; gap: 1rem; }
+    nav {
+      display: flex;
+      gap: clamp(0.5rem, 1.6vw, 1.25rem);
+      flex: 1 1 auto;
+      justify-content: flex-end;
+      min-width: 0;
+    }
 
     nav a {
-      color: white; text-decoration: none; font-weight: 600; font-size: 1.1rem;
-      padding: 0.5rem 0.75rem; border-radius: 6px; transition: background 0.3s;
+      color: white; text-decoration: none; font-weight: 600;
+      font-size: clamp(0.95rem, 1.2vw, 1.1rem);
+      padding: 0.5rem clamp(0.55rem, 1.1vw, 0.75rem);
+      border-radius: 6px; transition: background 0.3s;
+      flex-shrink: 1;
+      min-width: 0;
     }
     nav a:hover { background: rgba(255,255,255,0.1); }
 
