--- a/index.html
+++ b/index.html
@@ -237,18 +237,18 @@
       width: min(100%, 1200px);
     }
     .hero-intro {
-      text-align: left;
+      text-align: center;
       margin-bottom: 0.5rem;
       max-width: 680px;
       width: min(100%, 680px);
     }
     .hero-content {
-      text-align: left;
+      text-align: center;
       display: flex;
       flex-direction: column;
       gap: 1.5rem;
       margin-top: 0.5rem;
-      align-items: flex-start;
+      align-items: center;
       max-width: 720px;
       width: min(100%, 720px);
     }
@@ -272,6 +272,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
+      justify-content: center;
     }
     .hero-button {
       display: inline-flex;
@@ -398,7 +399,6 @@
       .hero-intro { text-align: center; margin-bottom: 0; align-self: center; }
       .hero-content { text-align: center; align-items: center; margin-top: 0; }
       .hero p { max-width: none; }
-      .hero-buttons { justify-content: center; }
       .hero-vision-highlights { text-align: left; }
       .hero-logo-card {
         width: min(92vw, 420px);
@@ -411,15 +411,6 @@
       .hero-inner {
         gap: clamp(3rem, 6vw, 4.5rem);
       }
-      .hero-intro,
-      .hero-content {
-        text-align: left;
-      }
-      .hero-content {
-        align-items: flex-start;
-      }
-      .hero-buttons { justify-content: flex-start; }
-      .hero-visual { justify-content: flex-start; }
       .hero-logo-card {
         max-width: 420px;
         width: 100%;
