--- a/index.html
+++ b/index.html
@@ -241,6 +241,10 @@
       margin-bottom: 0.5rem;
       max-width: 680px;
       width: min(100%, 680px);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.4rem;
     }
     .hero-content {
       text-align: center;
@@ -258,6 +262,10 @@
       text-transform: uppercase;
       font-weight: 600;
       color: rgba(255,255,255,0.8);
+      display: inline-flex;
+      justify-content: center;
+      text-align: center;
+      width: 100%;
     }
     .hero h1 {
       font-size: clamp(3rem, 7vw, 4.5rem);
