Fix mobile nav overflow clipping

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       z-index: 1001;
       width: min(100%, 100vw);
       margin-inline: auto;
-      overflow: clip;
+      overflow: visible;
       /* TODO: Restore fadeSlideIn animation once the initial background flash is resolved. */
       /* opacity: 0; */
       /* transform: translateY(-20px); */
