Update ownership phrasing

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
           <h3>Shared Stewardship</h3>
           <p>Technology stays rooted in the people who contribute to it and the communities who depend on it.</p>
           <ul>
-            <li>Employee- and customer-owners shaping strategy together.</li>
+            <li>Employee and customer owners shaping strategy together.</li>
             <li>Transparent governance that keeps value circulating locally.</li>
           </ul>
         </article>
