Update hero headline text

--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
         </div>
       </div>
       <div class="hero-content">
-        <h1>Build the future on the open web with 3dvr.tech</h1>
+        <h1>Build the future<br />3dvr.tech</h1>
         <p>
           3dvr.tech is a collaborative lab shaping respectful tools that return ownership,
           honor the planet, and help creators grow together.
