--- a/index.html
+++ b/index.html
@@ -271,6 +271,23 @@
       font-size: clamp(3rem, 7vw, 4.5rem);
       line-height: 1.1;
     }
+    .hero-headline {
+      display: inline-flex;
+      flex-direction: column;
+      align-items: center;
+      gap: clamp(0.6rem, 1.5vw, 1rem);
+    }
+    .hero-headline-primary,
+    .hero-headline-secondary {
+      display: block;
+    }
+    .hero-headline-divider {
+      width: clamp(60px, 14vw, 120px);
+      height: 4px;
+      border-radius: 999px;
+      background: linear-gradient(90deg, rgba(0,255,200,0.85), rgba(255,255,255,0.8));
+      box-shadow: 0 6px 20px rgba(0, 255, 200, 0.35);
+    }
     .hero p {
       font-size: clamp(1.1rem, 2vw, 1.4rem);
       color: rgba(255,255,255,0.85);
@@ -655,7 +672,11 @@
         </div>
       </div>
       <div class="hero-content">
-        <h1>Build the future<br />3dvr.tech</h1>
+        <h1 class="hero-headline">
+          <span class="hero-headline-primary">Build the future.</span>
+          <span class="hero-headline-divider" aria-hidden="true"></span>
+          <span class="hero-headline-secondary">3dvr.tech</span>
+        </h1>
         <p>
           3dvr.tech is a collaborative lab shaping respectful tools that return ownership,
           honor the planet, and help creators grow together.
