--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -131,7 +131,7 @@
         </ul>
         <div class="actions">
           <a class="cta primary" href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
-          <a class="cta secondary" href="free-plan.html">Plan details</a>
+          <a class="cta secondary" href="/subscribe/free-plan.html">Plan details</a>
         </div>
         <div class="notice">No credit card required.</div>
       </article>
@@ -149,7 +149,7 @@
         </ul>
         <div class="actions">
           <a class="cta primary" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">✅ Start Free Trial</a>
-          <a class="cta secondary" href="family-friends.html">Plan details</a>
+          <a class="cta secondary" href="/subscribe/family-friends.html">Plan details</a>
         </div>
         <div class="notice">30-day free trial. Cancel anytime from your Stripe receipt/email.</div>
       </article>
@@ -168,7 +168,7 @@
         </ul>
         <div class="actions">
           <a class="cta primary" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" rel="noopener">✅ Become a Founder</a>
-          <a class="cta secondary" href="founder-plan.html">Plan details</a>
+          <a class="cta secondary" href="/subscribe/founder-plan.html">Plan details</a>
         </div>
         <div class="notice">We’ll reach out after signup to get you moving fast.</div>
       </article>
