--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
       <a href="#team">Team</a>
       <a href="#about">About</a>
       <a href="pages/portfolio.html">Portfolio</a>
-      <a href="https://3dvr-portal.vercel.app/">Portal</a>
+      <a href="https://portal.3dvr.tech">Portal</a>
     </nav>
   </header>
 
