Remove legacy subscribe landing page and update portal URL

--- a/subscribe/free-plan.html
+++ b/subscribe/free-plan.html
@@ -114,7 +114,7 @@
     <nav>
       <a href="../index.html">Home</a>
       <a href="index.html#plans">All plans</a>
-      <a href="https://3dvr-portal.vercel.app/" target="_blank" rel="noopener">Portal</a>
+      <a href="https://portal.3dvr.tech/" target="_blank" rel="noopener">Portal</a>
     </nav>
   </header>
 
@@ -125,7 +125,7 @@
       <p>Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
       <div class="price">$0 / month</div>
       <div class="actions">
-        <a class="cta primary" href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
+        <a class="cta primary" href="https://portal.3dvr.tech/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
         <a class="cta secondary" href="index.html#plans">Back to all plans</a>
       </div>
     </section>
