--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -108,7 +108,7 @@
       <a href="../index.html">Home</a>
       <a href="#plans">Plans</a>
       <a href="#faq">FAQ</a>
-      <a href="https://3dvr-portal.vercel.app/" target="_blank" rel="noopener">Portal</a>
+      <a href="https://portal.3dvr.tech/" target="_blank" rel="noopener">Portal</a>
     </nav>
   </header>
 
@@ -130,7 +130,7 @@
           <li>Open-source repos and experiments</li>
         </ul>
         <div class="actions">
-          <a class="cta primary" href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
+          <a class="cta primary" href="https://portal.3dvr.tech/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
           <a class="cta secondary" href="/subscribe/free-plan.html">Plan details</a>
         </div>
         <div class="notice">No credit card required.</div>
@@ -194,7 +194,7 @@
 
       <details>
         <summary>Where can I see examples?</summary>
-        <p class="answer">Check our <a href="../index.html#testimonials">testimonials</a> and the <a href="https://3dvr-portal.vercel.app/" target="_blank" rel="noopener">portal</a> for in-progress experiments.</p>
+        <p class="answer">Check our <a href="../index.html#testimonials">testimonials</a> and the <a href="https://portal.3dvr.tech/" target="_blank" rel="noopener">portal</a> for in-progress experiments.</p>
       </details>
     </section>
   </main>
