--- a/subscribe/founder-plan.html
+++ b/subscribe/founder-plan.html
@@ -120,7 +120,7 @@
     <nav>
       <a href="../index.html">Home</a>
       <a href="index.html#plans">All plans</a>
-      <a href="https://3dvr-portal.vercel.app/" target="_blank" rel="noopener">Portal</a>
+      <a href="https://portal.3dvr.tech/" target="_blank" rel="noopener">Portal</a>
     </nav>
   </header>
 
