--- a/subscribe/free-plan.html
+++ b/subscribe/free-plan.html
@@ -122,7 +122,7 @@
     <section class="hero">
       <span class="eyebrow">Subscription</span>
       <h1>Free Plan</h1>
-      <p>Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
+      <p>Launch your presence with a free site we host for you on a 3dvr.tech subdomain.</p>
       <div class="price">$0 / month</div>
       <div class="actions">
         <a class="cta primary" href="https://portal.3dvr.tech/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
@@ -134,6 +134,7 @@
       <h2>What you get</h2>
       <p>Everything you need to start experimenting with immersive experiences and builder tooling—no credit card required.</p>
       <ul class="feature-list">
+        <li>Your own site hosted on a 3dvr.tech subdomain, ready for you to customize.</li>
         <li>All public documentation, starter templates, and quick-start guides.</li>
         <li>Regular community updates, roadmap previews, and open office recaps.</li>
         <li>Access to our open-source repositories, experiments, and design kits.</li>
@@ -150,7 +151,7 @@
         <span class="pill">Hackathon teams</span>
         <span class="pill">Curious explorers</span>
       </div>
-      <p>Use the Free plan to prototype concepts, follow along with development, and learn how we’re approaching VR-first web experiences.</p>
+      <p>Use the Free plan to prototype concepts, launch a hosted 3dvr.tech site, and learn how we’re approaching VR-first web experiences.</p>
     </section>
 
     <section class="panel">
@@ -158,11 +159,11 @@
       <div class="steps">
         <div class="step">
           <h3>1. Create your portal login</h3>
-          <p>Tap the ✅ Start Free button to register. You’ll get instant access—no payment details required.</p>
+          <p>Tap the ✅ Start Free button to register, claim your subdomain, and get instant access—no payment details required.</p>
         </div>
         <div class="step">
-          <h3>2. Grab a starter kit</h3>
-          <p>Clone a template, explore components, and remix anything in our open repositories.</p>
+          <h3>2. Customize your site</h3>
+          <p>Clone a template, publish updates to your hosted page, and remix anything in our open repositories.</p>
         </div>
         <div class="step">
           <h3>3. Share what you build</h3>
