--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -122,9 +122,10 @@
       <!-- FREE -->
       <article id="free" class="card">
         <h2>Free Plan</h2>
-        <p class="tagline">Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
+        <p class="tagline">Launch instantly with a free site hosted on a 3dvr.tech subdomain.</p>
         <div class="price">$0</div>
         <ul>
+          <li>Your own hosted 3dvr.tech subdomain</li>
           <li>Access to public docs & starter templates</li>
           <li>Community updates & roadmap</li>
           <li>Open-source repos and experiments</li>
