--- a/subscribe/free-plan.html
+++ b/subscribe/free-plan.html
@@ -122,7 +122,7 @@
     <section class="hero">
       <span class="eyebrow">Subscription</span>
       <h1>Free Plan</h1>
-      <p>Discover your vision and get started with a free website we host for you on a 3dvr.tech subdomain.</p>
+      <p>Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
       <div class="price">$0 / month</div>
       <div class="actions">
         <a class="cta primary" href="https://portal.3dvr.tech/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
@@ -134,7 +134,7 @@
       <h2>What you get</h2>
       <p>Everything you need to start experimenting with immersive experiences and builder tooling—no credit card required.</p>
       <ul class="feature-list">
-        <li>A hosted 3dvr.tech subdomain that’s ready to share from day one.</li>
+        <li>A hosted 3dvr.tech subdomain you can share from day one.</li>
         <li>All public documentation, starter templates, and quick-start guides.</li>
         <li>Regular community updates, roadmap previews, and open office recaps.</li>
         <li>Access to our open-source repositories, experiments, and design kits.</li>
@@ -151,7 +151,7 @@
         <span class="pill">Hackathon teams</span>
         <span class="pill">Curious explorers</span>
       </div>
-      <p>Use the Free plan to prototype concepts, publish to your hosted 3dvr.tech site, and learn how we’re approaching VR-first web experiences.</p>
+      <p>Use the Free plan to prototype concepts, publish to your hosted 3dvr.tech page, and learn how we’re approaching VR-first web experiences.</p>
     </section>
 
     <section class="panel">
@@ -159,7 +159,7 @@
       <div class="steps">
         <div class="step">
           <h3>1. Create your portal login</h3>
-          <p>Tap the ✅ Start Free button to register, claim your subdomain, and get instant access—no payment details required.</p>
+          <p>Tap the ✅ Start Free button to register, reserve your subdomain, and get instant access—no payment details required.</p>
         </div>
         <div class="step">
           <h3>2. Customize your site</h3>
