Restore original free plan copy on marketing pages

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
     <div class="card-grid">
       <a href="subscribe/free-plan.html" class="card">
         <h3><span class="plan-name">Free Plan</span><br><span class="plan-price">Free!</span></h3>
-        <p>Launch instantly with a free site hosted on a 3dvr.tech subdomain.</p>
+        <p>Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
         <span class="btn-like">Learn More</span>
       </a>
       <a href="subscribe/family-friends.html" class="card">
