--- a/index.html
+++ b/index.html
@@ -464,6 +464,145 @@
     .card h3 .plan-name { white-space: nowrap; }
     .card p { font-size: 1rem; }
 
+    #features {
+      position: relative;
+      overflow: hidden;
+      isolation: isolate;
+    }
+    #features::before,
+    #features::after {
+      content: "";
+      position: absolute;
+      inset: auto;
+      border-radius: 50%;
+      filter: blur(0.5px);
+      opacity: 0.7;
+      pointer-events: none;
+      transform: translateZ(0);
+      z-index: 0;
+    }
+    #features::before {
+      width: clamp(320px, 48vw, 520px);
+      height: clamp(320px, 48vw, 520px);
+      top: -180px;
+      right: -120px;
+      background: radial-gradient(circle, rgba(0, 255, 200, 0.45) 0%, rgba(0, 255, 200, 0) 70%);
+    }
+    #features::after {
+      width: clamp(280px, 42vw, 460px);
+      height: clamp(280px, 42vw, 460px);
+      bottom: -160px;
+      left: -140px;
+      background: radial-gradient(circle, rgba(255, 165, 92, 0.4) 0%, rgba(255, 165, 92, 0) 72%);
+    }
+    #features h2 { position: relative; z-index: 1; }
+    #features .section-lede {
+      position: relative;
+      z-index: 1;
+      margin: 0.75rem auto 0;
+      max-width: 700px;
+      text-align: center;
+      font-size: 1.05rem;
+      color: rgba(255, 255, 255, 0.9);
+    }
+    .features-grid {
+      position: relative;
+      z-index: 1;
+      gap: clamp(1.5rem, 3vw, 2.5rem);
+    }
+    .feature-card {
+      max-width: 340px;
+      min-width: min(260px, 100%);
+      padding: clamp(1.9rem, 2.8vw, 2.4rem);
+      align-items: flex-start;
+      text-align: left;
+      background: linear-gradient(150deg, rgba(255, 255, 255, 0.16), rgba(0, 0, 0, 0.15));
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      box-shadow: 0 18px 36px rgba(8, 25, 35, 0.35);
+      backdrop-filter: blur(10px);
+      gap: 1.4rem;
+    }
+    .feature-card:hover {
+      background: linear-gradient(150deg, rgba(255, 255, 255, 0.26), rgba(0, 0, 0, 0.18));
+      transform: translateY(-8px);
+      box-shadow: 0 24px 48px rgba(8, 25, 35, 0.42);
+    }
+    .feature-card .feature-content {
+      display: flex;
+      flex-direction: column;
+      gap: 0.9rem;
+      align-items: flex-start;
+      width: 100%;
+    }
+    .feature-icon {
+      width: 56px;
+      height: 56px;
+      border-radius: 16px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0, 255, 200, 0.18);
+      color: var(--accent);
+      font-size: 1.6rem;
+      box-shadow: inset 0 0 0 1px rgba(0, 255, 200, 0.3), 0 12px 25px rgba(0, 0, 0, 0.35);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .feature-card:hover .feature-icon {
+      transform: scale(1.08) translateY(-2px);
+      box-shadow: inset 0 0 0 1px rgba(0, 255, 200, 0.45), 0 18px 30px rgba(0, 0, 0, 0.4);
+    }
+    .feature-card h3 {
+      font-size: 1.35rem;
+      margin-bottom: 0.15rem;
+    }
+    .feature-card p {
+      color: rgba(255, 255, 255, 0.88);
+      margin-bottom: 0;
+    }
+    .feature-list {
+      display: flex;
+      flex-direction: column;
+      gap: 0.45rem;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+    }
+    .feature-list li {
+      position: relative;
+      padding-left: 1.3rem;
+      font-size: 0.95rem;
+      color: rgba(255, 255, 255, 0.82);
+    }
+    .feature-list li::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0.45rem;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: var(--accent);
+      box-shadow: 0 0 12px rgba(0, 255, 200, 0.4);
+    }
+    .feature-cta {
+      margin-top: auto;
+      font-weight: 600;
+      color: var(--accent);
+      font-size: 0.95rem;
+      letter-spacing: 0.02em;
+    }
+    .feature-card:hover .feature-cta { color: #f9f9f9; }
+
+    @media (max-width: 1024px) {
+      .feature-card { max-width: min(48%, 360px); }
+    }
+    @media (max-width: 768px) {
+      .feature-card { max-width: 100%; }
+      .feature-card .feature-content { gap: 0.8rem; }
+      .feature-card h3 { font-size: 1.25rem; }
+    }
+
     #testimonials {
       position: relative;
       overflow: hidden;
@@ -837,12 +976,78 @@
 
   <section id="features" style="background: var(--bg-features);">
     <h2>What You Get</h2>
-    <div class="card-grid">
-      <a href="websites.html" class="card"><h3>Websites & Landing Pages</h3><p>Beautiful, responsive sites tailored to your brand and goals.</p></a>
-      <a href="apps.html" class="card"><h3>App Designs</h3><p>Mobile-ready UI/UX designs that engage and convert.</p></a>
-      <a href="support.html" class="card"><h3>Unlimited Tech Support</h3><p>Ask anything—no limits. We're here to help you build.</p></a>
-      <a href="consulting.html" class="card"><h3>Personal Consultations</h3><p>We'll meet with you to brainstorm, refine, and launch ideas.</p></a>
-      <a href="community.html" class="card"><h3>Builder Community</h3><p>Join a community of creators, developers, and dreamers.</p></a>
+    <p class="section-lede">From first sketch to ongoing support, every engagement unlocks these core experiences.</p>
+    <div class="card-grid features-grid">
+      <a href="websites.html" class="card feature-card">
+        <div class="feature-icon" aria-hidden="true">
+          <i class="fa-solid fa-globe"></i>
+        </div>
+        <div class="feature-content">
+          <h3>Websites &amp; Landing Pages</h3>
+          <p>Beautiful, responsive sites tailored to your brand and goals.</p>
+          <ul class="feature-list">
+            <li>Accessibility-first layouts, copy, and SEO foundations.</li>
+            <li>Launch guidance covering hosting, analytics, and security.</li>
+          </ul>
+          <span class="feature-cta">See website work →</span>
+        </div>
+      </a>
+      <a href="apps.html" class="card feature-card">
+        <div class="feature-icon" aria-hidden="true">
+          <i class="fa-solid fa-mobile-screen"></i>
+        </div>
+        <div class="feature-content">
+          <h3>App Designs</h3>
+          <p>Mobile-ready UI/UX design systems that engage and convert.</p>
+          <ul class="feature-list">
+            <li>Prototype flows, component libraries, and motion specs.</li>
+            <li>Hand-off ready files for dev teams or no-code builders.</li>
+          </ul>
+          <span class="feature-cta">Preview app flows →</span>
+        </div>
+      </a>
+      <a href="support.html" class="card feature-card">
+        <div class="feature-icon" aria-hidden="true">
+          <i class="fa-solid fa-headset"></i>
+        </div>
+        <div class="feature-content">
+          <h3>Unlimited Tech Support</h3>
+          <p>Ask anything—no limits. We're here to help you build.</p>
+          <ul class="feature-list">
+            <li>Async walkthroughs, screen recordings, and bug triage.</li>
+            <li>Automation, integrations, and systems advice on demand.</li>
+          </ul>
+          <span class="feature-cta">Meet the support desk →</span>
+        </div>
+      </a>
+      <a href="consulting.html" class="card feature-card">
+        <div class="feature-icon" aria-hidden="true">
+          <i class="fa-solid fa-lightbulb"></i>
+        </div>
+        <div class="feature-content">
+          <h3>Personal Consultations</h3>
+          <p>We'll meet with you to brainstorm, refine, and launch ideas.</p>
+          <ul class="feature-list">
+            <li>Strategy sessions to prioritize, scope, and plan next steps.</li>
+            <li>Documentation, templates, and resource recommendations.</li>
+          </ul>
+          <span class="feature-cta">Book a session →</span>
+        </div>
+      </a>
+      <a href="community.html" class="card feature-card">
+        <div class="feature-icon" aria-hidden="true">
+          <i class="fa-solid fa-people-group"></i>
+        </div>
+        <div class="feature-content">
+          <h3>Builder Community</h3>
+          <p>Join a community of creators, developers, and dreamers.</p>
+          <ul class="feature-list">
+            <li>Monthly build-alongs and office hours with the 3dvr.tech team.</li>
+            <li>Private channels to trade feedback, templates, and wins.</li>
+          </ul>
+          <span class="feature-cta">Join fellow builders →</span>
+        </div>
+      </a>
     </div>
   </section>
 
